<resources>
    <string name="title_activity_initial_medical_care">Initial Medical Care</string>
    <string name="initial_medical_header"><b><u>INITIAL MEDICAL/TRAUMA CARE</u></b></string>
    <string name="title_activity_asthma"><b><u>ASTHMA</u></b></string>
    <string name="title_activity_carbon_monoxide">Carbon Monoxide</string>
    <string name="title_activity_copd">COPD</string>
    <string name="title_activity_difficult_airway">DIFFICULT AIRWAY</string>
    <string name="title_activity_fbao">FBAO</string>
    <string name="title_activity_pulmonary_edema">Pulmonary Edema</string>
    <string name="title_activity_acs">Acute Coronary Syndrome</string>
    <string name="title_activity_asystole">Asystole/PEA</string>
    <string name="title_activity_bradycardia">Bradycardia</string>
    <string name="title_activity_narrow_complex_irreg">Narrow Tach Irreg</string>
    <string name="title_activity_narrow_complex_reg">Narrow Tach Regular</string>
    <string name="title_activity_rosc">Post Resuscitation/ROSC</string>
    <string name="title_activity_vad">VAD</string>
    <string name="title_activity_vfib">VFib/Puleless VTAC</string>
    <string name="title_activity_wide_complex">Wide Complex Tach</string>
    <string name="title_activity_abdominal_pain">Abdominal Pain</string>
    <string name="title_activity_allergic_reaction">Allergic Reaction</string>
    <string name="title_activity_ams">AMS</string>
    <string name="title_activity_drug_overdose">OD/Poison</string>
    <string name="title_activity_environmental_cold">Environmental Cold</string>
    <string name="title_activity_environmental_heat">Environmental Heat</string>
    <string name="title_activity_esophageal_foreign_body_obstruction">Esophageal Obstruction</string>
    <string name="title_activity_excited_delirium">Excited Delirium</string>
    <string name="title_activity_extra_pyramidal">Extra Pyramidal</string>
    <string name="title_activity_hazardous_material">HazardousMaterialActivity</string>
    <string name="title_activity_hypertensive_crisis">Hypertensive Crisis</string>
    <string name="title_activity_hypo_hyper_glycemia">Hypo/Hyper Glycemia</string>
    <string name="title_activity_nausea_vomiting">Nausea/Vomiting</string>
    <string name="title_activity_non_environmental_hyperthermia">Hyperthermia Nonenv</string>
    <string name="title_activity_psychological_behavioral">Psych/Behavioral</string>
    <string name="title_activity_scene_rehab">Scene Rehab</string>
    <string name="title_activity_seizure">Seizure</string>
    <string name="title_activity_sepsis">Sepsis</string>
    <string name="title_activity_shock">Shock</string>
    <string name="title_activity_sickle_cell_anemia">Sickle Cell</string>
    <string name="title_activity_syncope">Syncope/GenWeakness</string>
    <string name="title_activity_childbirth">Childbirth</string>
    <string name="title_activity_childbirth_complications">Childbirth Complications</string>
    <string name="title_activity_post_partum">Post Partum</string>
    <string name="title_activity_prenatal_emergencies">Prenatal Emergencies</string>
    <string name="title_activity_trauma_in_pregnancy">TraumaInPregnancyActivity</string>
    <string name="title_activity_vaginal_bleeding">Vaginal Bleeding</string>
    <string name="parameter_pediatric_tachycardia_header"><b><u>PEDIATRIC TACHYCARDIA</u></b></string>
    <string name="parameter_pediatric_tachycardia">
        <b>I.	BASIC CARE</b> \n\n
            \t •	<b>Initial Medical Care.</b> Place patient in their position of comfort. \n\n
            \t •	<b>Length-Based Tape:</b> measure child to determine weight and color zone. Select
                antiarrhythmic dosages and equipment as indicated by color zone on the Length-Based Tape.
                If Length-Based Tape not available, calculate dosages using weight-based dosages listed
                below. \n\n
        <b>II.	ADVANCED CARE</b> \n\n
            \t •	<b>Treat Underlying Cause:</b> assess and treat suspected cause if sinus tachycardia
                (See Notes). \n\n
            \t •	<b>Vagal Maneuvers:</b> perform Valsalva maneuver or apply cool moisture to face. \n\n
            \t •	<b>Antiarrhythmic Agents:</b> \n\n
                \t\t i.	<b>Adenosine:</b> first dose of 0.1 mg/kg Rapid IVP (maximum 1st dose of 6 mg). If
                    no conversion, second dose: 0.2 mg/kg Rapid IVP (maximum 2nd dose of 12 mg).
                    <u>Indications:</u> stable patients with narrow-complex tachycardia. \n\n
                \t\t ii.	<b>Amiodarone:</b> 5 mg/kg IV drip (bolus over 20 minutes) (max single dose of
                    300 mg) \n\n
                    <u>Indications:</u> stable patients with wide-complex tachycardia. \n\n
                \t\t iii.	Physician\’s Consult: contact Medical Control for alternative treatments if above
                    antiarrhythmic agents are unsuccessful in rhythm conversion or rate control. \n\n
            \t •	<b>Synchronized Cardioversion:</b> 1 J/kg \n\n
                \t\t <u>Indications:</u> unstable patients with inadequate perfusion. \n\n
                \t\t i.	Consider pre-medication with Midazolam: 0.1 mg/kg IV or Intra-nasal, repeat every
                    3-5 minutes until adequate relaxation / sedation is achieved prior to procedure
                    (max total dosage 4 mg). Use Midazolam with caution in the presence of hypotension. \n\n
                \t\t ii.	If rhythm does not convert, escalate energy level to 2 J/kg for Subsequent
                    SYNCHRONIZED CARDIOVERSIONS \n\n
                \t\t iii.	If delays in synchronization occur and clinical condition is critical, proceed
                    immediately to unsynchronized shocks i.e. defibrillation \n\n
        <b><u>NOTES:</u></b> \n\n
        1.	Sinus tachycardia: p-waves present and normal, usually has variable RR intervals (varies during
            respirations and agitation), and constant PR interval.
    </string>
    <string name="parameter_pediatric_tachycardia_chart1">
        Infants:	HR usually &lt; 220 bpm. \n
        Children:	HR usually &lt; 180 bpm.
    </string>
    <string name="parameter_pediatric_tachycardia_note2">
        2.	SVT or narrow-complex tachycardia: p-waves absent / abnormal, RR intervals not variable, and
        history of abrupt rate changes.
    </string>
    <string name="parameter_pediatric_tachycardia_chart2">
        Infants:	HR usually &gt; 220 bpm. \n
        Children:	HR usually &gt; 180 bpm.
    </string>
    <string name="title_activity_newborn">Newborn Care</string>
    <string name="title_activity_animal_bite">Animal Bite/Sting</string>
    <string name="title_activity_burns">Burns</string>
    <string name="title_activity_chest_injury">Chest Injury</string>
    <string name="title_activity_crush">Crush / Entrapment</string>
    <string name="title_activity_decompression">Decompression Sickness</string>
    <string name="title_activity_drowning">Drowning</string>
    <string name="m_initial_medical_care">Initial Medical/Trauma Care</string>
    <string name="m_pain_management">Pain Management</string>
    <string name="m_respiratory">Respiratory</string>
    <string name="m_cardiac">Cardiac</string>
    <string name="m_medical_emergencies">Medical Emergencies</string>
    <string name="m_obgyn">OB/GYN</string>
    <string name="m_pediatric">Pediatric</string>
    <string name="m_trauma">Trauma</string>
</resources>